# qtgui-powermeter

./: README  TaurusTrend.pck  powermeter.py  pyproject.toml
